# arrow-datafusion-ruby

./: CONTRIBUTING.md  Gemfile  README.md  arrow-datafusion.gemspec
ext/datafusion_ruby/: Cargo.toml
ext/datafusion_ruby/src/: context.rs  dataframe.rs  errors.rs  lib.rs  record_batch.rs  utils.rs
lib/datafusion/: version.rb
spec/fixtures/: test.csv
spec/lib/: context_spec.rb
