[package]
name = "datafusion_ruby"
version = "0.0.1"
authors = ["Datafusion Contrib Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# as of 2022-07, magnus v0.3.2 does NOT include "define_error" in RModule
magnus = { git = "https://github.com/matsadler/magnus" }
datafusion = { version = "^8.0.0" }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
